--- a/hm.tex
+++ b/hm.tex
@@ -2863,7 +2863,7 @@ Similarly, given a two-form $\omega = \omega_{ij}(x) \d x^i\wedge \d x^j$, we ca
 \end{equation}
 We will see in later chapters how this simplifies our lives.
 
-The last thing to know, is that we can construct two-forms out of one-forms using an operation called \emph{exterior derivative}.
+The last thing to know, is that we can construct two-forms out of one-forms using so-called \emph{exterior products} and \emph{exterior derivatives}.
 For what concerns us, we will only need to know that $\d (\sigma_i \d x^i) = \frac{\partial \sigma_i}{\partial x^j} \d x^j \wedge \d x^i$ and that $\d (\d f) = 0$ for any $f$.
 
 We will also need to generalize the pull-back operation.
