Some more fixes
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.tex
+++ b/hm.tex
@@ -4217,9 +4217,9 @@ The tautological one--form, also called canonical one--form, Liouville one--form
   \begin{equation}
     \eta(x):T_xP\to\R.
   \end{equation}
-  Recalling that $T^*P = \big\{\phi: TP \to \R \mid \phi\mbox{ linear}\big\}$,
+  Recalling that $T_x^*P = \big\{\phi: T_x P \to \R \mid \phi\mbox{ linear}\big\}$,
   \begin{equation}
-    \eta : P \to T^* P.
+    \eta(x) : P \to T^*_x P.
   \end{equation}
   The map $\eta$ we just defined is the tautological one--form.
 \end{remark}
